# wine_collector

backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  start.sh  uvicorn_log_config.json
backend/alembic/: env.py
backend/alembic/versions/: 20260202_add_label_number.py  20260203_add_scan_sessions.py  20260203_add_user_label_sequence.py  20260203_remove_tag_abbreviation.py  20260206_add_status_dates_to_user_wines.py  20260206_create_user_wine_status_histories.py  20260207_add_recommendation_cache.py  20260208_add_user_profile_fields.py  20260208_add_wine_ai_analysis.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py  seeds.py
backend/app/api/: deps.py
backend/app/api/v1/: ai_settings.py  auth.py  dashboard.py  recommendations.py  router.py  scan.py  tags.py  wines.py
backend/app/models/: __init__.py  recommendation.py  recommendation_cache.py  scan_session.py  tag.py  user.py  user_wine.py  user_wine_status_history.py  wine.py
backend/app/schemas/: __init__.py  auth.py  common.py  recommendation.py  scan.py  tag.py  wine.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  dashboard_service.py  recommendation_service.py  scan_service.py  storage_service.py  tag_service.py  wine_service.py
backend/app/services/ai/: scan_prompts.py
backend/app/services/ai/providers/: __init__.py  anthropic.py  base.py  gemini.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  (+2 more)
(+63 files in other folders)
